--- a/html/index.html
+++ b/html/index.html
@@ -143,8 +143,8 @@
 }
 .libros-container{
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-        width: 50%;
+        grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+        width: 80%;
         margin: auto;
         gap: 10px;
         padding: 50px 20px;
